added some changes

--- a/settings.html
+++ b/settings.html
@@ -217,7 +217,7 @@
                     <p class="mt-0 mb-20 t c-gold">show/hide widgets</p>
                     <div class="line"></div>
                     <div class="control d-flex align-center mb-15">
-                        <input class="" type="checkbox" id="one">
+                        <input class="" type="checkbox" id="one" checked>
                         <label class="c-gold" for="one">quick draft</label>
                     </div>
                     <div class="control d-flex align-center mb-15">
@@ -225,7 +225,7 @@
                         <label class="c-gold" for="two">yearly targets</label>
                     </div>
                     <div class="control d-flex align-center mb-15">
-                        <input class="" type="checkbox" id="three">
+                        <input class="" type="checkbox" id="three" checked>
                         <label class="c-gold" for="three">tickets statistics</label>
                     </div>
                     <div class="control d-flex align-center mb-15">
@@ -233,11 +233,11 @@
                         <label class="c-gold" for="four">latest news</label>
                     </div>
                     <div class="control d-flex align-center mb-15">
-                        <input class="" type="checkbox" id="five">
+                        <input class="" type="checkbox" id="five" checked>
                         <label class="c-gold" for="five">latest tasks</label>
                     </div>
                     <div class="control d-flex align-center mb-15">
-                        <input class="" type="checkbox" id="six">
+                        <input class="" type="checkbox" id="six" checked>
                         <label class="c-gold" for="six">top search items</label>
                     </div>
                 </div>
