added last widget in setting page

--- a/settings.html
+++ b/settings.html
@@ -216,29 +216,72 @@
                     <h2 class="mt-0  mb-10 c-gold">widgets control</h2>
                     <p class="mt-0 mb-20 t c-gold">show/hide widgets</p>
                     <div class="line"></div>
-                    <div class="control d-flex align-center mb-15">
+                    <div class="control d-flex align-center mb-25">
                         <input class="" type="checkbox" id="one" checked>
                         <label class="c-gold" for="one">quick draft</label>
                     </div>
-                    <div class="control d-flex align-center mb-15">
+                    <div class="control d-flex align-center mb-25">
                         <input class="" type="checkbox" id="two">
                         <label class="c-gold" for="two">yearly targets</label>
                     </div>
-                    <div class="control d-flex align-center mb-15">
+                    <div class="control d-flex align-center mb-25">
                         <input class="" type="checkbox" id="three" checked>
                         <label class="c-gold" for="three">tickets statistics</label>
                     </div>
-                    <div class="control d-flex align-center mb-15">
+                    <div class="control d-flex align-center mb-25">
                         <input class="" type="checkbox" id="four">
                         <label class="c-gold" for="four">latest news</label>
                     </div>
-                    <div class="control d-flex align-center mb-15">
+                    <div class="control d-flex align-center mb-25">
                         <input class="" type="checkbox" id="five" checked>
                         <label class="c-gold" for="five">latest tasks</label>
                     </div>
-                    <div class="control d-flex align-center mb-15">
+                    <div class="control d-flex align-center mb-25">
                         <input class="" type="checkbox" id="six" checked>
                         <label class="c-gold" for="six">top search items</label>
+                    </div>
+                </div>
+                <!-- End Widgets Control Info -->
+                <!-- Start Widgets Control Info -->
+                <div class="backup-control m-20 txt-tf-c p-20 bg-red-alt rad-10">
+                    <h2 class="mt-0  mb-10 c-gold">backup manager</h2>
+                    <p class="mt-0 mb-20 t c-gold">show/hide widgets</p>
+                    <div class="line"></div>
+                    <div class="control d-flex align-center mb-15">
+                        <input class="" type="radio" name="time" id="daily" >
+                        <label class="c-gold" for="daily">weekly</label>
+                    </div>
+                    <div class="control d-flex align-center mb-15">
+                        <input class="" type="radio" name="time" id="weekly" >
+                        <label class="c-gold" for="weekly">weekly</label>
+                    </div>
+                    <div class="control d-flex align-center mb-15">
+                        <input class="" type="radio" name="time" id="monthly" >
+                        <label class="c-gold" for="monthly">monthly</label>
+                    </div>
+                    <div class="line"></div>
+                    <div class="servers d-flex align-center txt-c c-gold">
+                        <input type="radio" name="servers" id="server-one">
+                        <div class="server mb-15 rad10 w-full m-5">
+                            <label class="d-block m-15" for="server-one">
+                                <i class="fa-solid fa-server d-block mb-10 "></i>
+                                megaman
+                            </label>
+                        </div>
+                        <input type="radio" name="servers" id="server-two" checked>
+                        <div class="server mb-15 rad10 w-full m-5">
+                            <label class="d-block m-15" for="server-two">
+                                <i class="fa-solid fa-server d-block mb-10 "></i>
+                                zero
+                            </label>
+                        </div>
+                        <input type="radio" name="servers" id="server-three">
+                        <div class="server mb-15 w-full m-5">
+                            <label class="d-block m-15" for="server-three">
+                                <i class="fa-solid fa-server d-block mb-10"></i>
+                                sigma
+                            </label>
+                        </div>
                     </div>
                 </div>
                 <!-- End Widgets Control Info -->
