--- a/index.html
+++ b/index.html
@@ -514,7 +514,16 @@
                         <span><span class="fw-bold">34K</span> followers</span>
                         <a href="" class="fa-13 btn-shape">contact</a>
                     </div>
-                    <img src="images/gun-1.png" alt="" style="width: 280px; opacity:.8; margin: 0px 180px">
+                    <div class="box instagram p-15 p-relative mb-10 between-flex">
+                        <i class="fa-brands fa-instagram fa-2x h-full center-flex"></i>
+                        <span><span class="fw-bold">498K</span> followers</span>
+                        <a href="" class="fa-13 btn-shape">follow</a>
+                    </div> 
+                    <div class="box sanpchat p-15 p-relative mb-10 between-flex">
+                        <i class="fa-brands fa-snapchat fa-2x h-full center-flex"></i>
+                        <span><span class="fw-bold">121K</span> followers</span>
+                        <a href="" class="fa-13 btn-shape">contact</a>
+                    </div> 
                 </div>
                 <!-- Start Social Media Widget -->
             </div>
