--- a/profile.html
+++ b/profile.html
@@ -113,6 +113,29 @@
             </div>
             <!-- End Head -->
             <h1 class="p-relative">Profile</h1>
+            <div class="profile-page m-20 c-gold txt-tf-c">
+                <div class="overview bg-red-alt rad-10 d-flex -align-center">
+                    <div class="avatar-box">
+                        <img class="rad-half mb-10" src="images/main-sq-80px.jpg" alt="">
+                        <h3 class="m-0 ">molatham</h3>
+                        <p class="c-gold-alt mt-10">level 20</p>
+                        <div class="level rad-6 bg-red p-relative">
+                            <span style="width: 70%;"></span>
+                        </div>
+                        <div class="rating mt-10 mb-10">
+                            <i class="fa-solid fa-star fs-13"></i>
+                            <i class="fa-solid fa-star fs-13"></i>
+                            <i class="fa-solid fa-star fs-13"></i>
+                            <i class="fa-solid fa-star fs-13"></i>
+                            <i class="fa-solid fa-star fs-13"></i> 
+                        </div>
+                        <p class="m-0 fs-13">550 rating</p>
+                    </div>
+                    <div class="info-box">
+
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
