add info in profile page

--- a/profile.html
+++ b/profile.html
@@ -132,7 +132,25 @@
                         <p class="m-0 fs-13">550 rating</p>
                     </div>
                     <div class="info-box">
-                        
+                        <div class="box p-20 d-flex align-center">
+                            <h4 class="w-full">general information</h4>
+                            <div class="">
+                                <span class="">full name</span>
+                                <span class="fw-bold">molatham</span>
+                            </div>
+                            <div class="">
+                                <span class="">country</span>
+                                <span class="fw-bold">palestine</span>
+                            </div>
+                            <div class="">
+                                <span class="">gender</span>
+                                <span class="fw-bold">male</span>
+                            </div>
+                            <div class="">
+                                <input type="checkbox" class="toggle-checkbox">
+                                <div class="toggle-switch"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
