add info in profile page

--- a/profile.html
+++ b/profile.html
@@ -132,11 +132,11 @@
                         <p class="m-0 fs-13">550 rating</p>
                     </div>
                     <div class="info-box">
-                        <div class="box p-20 d-flex align-center">
-                            <h4 class="w-full">general information</h4>
+                        <div class="box p-20 ">
+                            <h4 class="w-full fs-24 ">general information</h4>
                             <div class="">
                                 <span class="">full name</span>
-                                <span class="fw-bold">molatham</span>
+                                <span class="fw-bold">molatham </span>
                             </div>
                             <div class="">
                                 <span class="">country</span>
@@ -147,10 +147,37 @@
                                 <span class="fw-bold">male</span>
                             </div>
                             <div class="">
-                                <input type="checkbox" class="toggle-checkbox">
-                                <div class="toggle-switch"></div>
+                                <span class="">Occupation</span>
+                                <span class="fw-bold">Unknown (Suspected Vigilante)</span>
+                            </div>
+                            <div class="">
+                                <span class="">skills</span>
+                                <span class="fw-bold">Martial Arts, Stealth, Tactical Planning</span>
+                            </div>
+                            <div class="">
+                                <span class="">Notable Traits</span>
+                                <span class="fw-bold">Always wears a mask, operates mainly at night, known for swift justice</span>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="other-data d-flex gap-20 c-gold">
+                    <div class="skills-card bg-red-alt mt-20 rad-8">
+                        <h2 class="mt-0 mt-10">my skills</h2>
+                        <p class="mt-0 mb-20 fs-15">complete skills list</p>
+                        <ul class="m-0 txt-c-mobile">
+                            <li><span>HTML</span><span>Pugjs</span><span>HAML</span></li>
+                            <li><span>CSS</span><span>SASS</span><span>Stylus</span></li>
+                            <li><span>JavaScript</span><span>TypeScript</span></li>
+                            <li><span>Vuejs</span><span>Reactjs</span></li>
+                            <li><span>Jest</span><span>Jasmine</span></li>
+                            <li><span>PHP</span><span>Laravel</span></li>
+                            <li><span>Python</span><span>Django</span></li>
+                          </ul>
+                    </div>
+                    <div class="activities bg-red-alt mt-20 rad-8">
+                        <h2 class="mt-0 mt-10">activities</h2>
+                        <p class="mt-0 mb-20 fs-15">latest activities done by the user</p>
                     </div>
                 </div>
             </div>
