add information for profile page

--- a/profile.html
+++ b/profile.html
@@ -127,7 +127,7 @@
                             <i class="fa-solid fa-star fs-13"></i>
                             <i class="fa-solid fa-star fs-13"></i>
                             <i class="fa-solid fa-star fs-13"></i>
-                            <i class="fa-solid fa-star fs-13"></i> 
+                            <i class="fa-solid fa-star fs-13"></i>
                         </div>
                         <p class="m-0 fs-13">550 rating</p>
                     </div>
@@ -156,14 +156,15 @@
                             </div>
                             <div class="">
                                 <span class="">Notable Traits</span>
-                                <span class="fw-bold">Always wears a mask, operates mainly at night, known for swift justice</span>
+                                <span class="fw-bold">Always wears a mask, operates mainly at night, known for swift
+                                    justice</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="other-data d-flex gap-20 c-gold">
-                    <div class="skills-card bg-red-alt mt-20 rad-8">
-                        <h2 class="mt-0 mt-10">my skills</h2>
+                    <div class="skills-card bg-red-alt mt-20 rad-8 p-20">
+                        <h2 class="mt-0 mt-10 ">my skills</h2>
                         <p class="mt-0 mb-20 fs-15">complete skills list</p>
                         <ul class="m-0 txt-c-mobile">
                             <li><span>HTML</span><span>Pugjs</span><span>HAML</span></li>
@@ -173,15 +174,60 @@
                             <li><span>Jest</span><span>Jasmine</span></li>
                             <li><span>PHP</span><span>Laravel</span></li>
                             <li><span>Python</span><span>Django</span></li>
-                          </ul>
+                        </ul>
                     </div>
-                    <div class="activities bg-red-alt mt-20 rad-8">
+                    <div class="activities bg-red-alt mt-20 rad-8 p-20">
                         <h2 class="mt-0 mt-10">activities</h2>
                         <p class="mt-0 mb-20 fs-15">latest activities done by the user</p>
+                        <div class="activity d-flex align-center txt-c-mobile">
+                            <i class="fa-solid fa-house fa-4x d-in-block"></i>
+                            <div class="info">
+                                <span class="d-block-mb-10"></span>>New Project</span>
+                                <span>Started working on a new HTML and CSS project</span>
+                            </div>
+                            <div class="date">
+                                <span class="d-block-mb-10">2024-08-05</span>
+                                <span class="">10:00 AM</span>
+                            </div>
+                        </div>
+                        <div class="activity d-flex align-center txt-c-mobile">
+                            <i class="fa-solid fa-wand-magic-sparkles fa-4x"></i>
+                            <div class="info">
+                                <span class="d-block-mb-10"></span>>GitHub Update</span>
+                                <span>Pushed latest changes to GitHub repository</span>
+                            </div>
+                            <div class="date">
+                                <span class="d-block-mb-10">2024-08-06</span>
+                                <span class="">2:30 PM</span>
+                            </div>
+                        </div>
+                        <div class="activity d-flex align-center txt-c-mobile">
+                            <i class="fa-solid fa-bolt fa-4x d-in-block"></i>
+                            <div class="info">
+                                <span class="d-block-mb-10"></span>>Research University</span>
+                                <span>Conducted research on universities in Austria.</span>
+                            </div>
+                            <div class="date">
+                                <span class="d-block-mb-10">2024-08-07</span>
+                                <span class="">11:15 AM</span>
+                            </div>
+                        </div>
+                        <div class="activity d-flex align-center txt-c-mobile">
+                            <i class="fa-solid fa-tag fa-4x d-in-block"></i>
+                            <div class="info">
+                                <span class="d-block-mb-10"></span>>Graphic Design</span>
+                                <span>Designed new graphics for a client's website</span>
+                            </div>
+                            <div class="date">
+                                <span class="d-block-mb-10"> 2024-08-07</span>
+                                <span class="">3:00 PM</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </body>
 
