projects page had finshed

--- a/profile.html
+++ b/profile.html
@@ -180,45 +180,45 @@
                         <h2 class="mt-0 mt-10">activities</h2>
                         <p class="mt-0 mb-20 fs-15">latest activities done by the user</p>
                         <div class="activity d-flex align-center txt-c-mobile">
-                            <i class="fa-solid fa-house fa-4x d-in-block"></i>
+                            <i class="fa-solid fa-house fa-4x d-in-block mr-20"></i>
                             <div class="info">
-                                <span class="d-block-mb-10"></span>>New Project</span>
+                                <span class="d-block-mb-10"></span>New Project</span>
                                 <span>Started working on a new HTML and CSS project</span>
                             </div>
-                            <div class="date">
+                            <div class="date ml-15">
                                 <span class="d-block-mb-10">2024-08-05</span>
                                 <span class="">10:00 AM</span>
                             </div>
                         </div>
                         <div class="activity d-flex align-center txt-c-mobile">
-                            <i class="fa-solid fa-wand-magic-sparkles fa-4x"></i>
+                            <i class="fa-solid fa-wand-magic-sparkles fa-4x mr-20"></i>
                             <div class="info">
-                                <span class="d-block-mb-10"></span>>GitHub Update</span>
+                                <span class="d-block-mb-10"></span>GitHub Update</span>
                                 <span>Pushed latest changes to GitHub repository</span>
                             </div>
-                            <div class="date">
+                            <div class="date ml-15">
                                 <span class="d-block-mb-10">2024-08-06</span>
                                 <span class="">2:30 PM</span>
                             </div>
                         </div>
                         <div class="activity d-flex align-center txt-c-mobile">
-                            <i class="fa-solid fa-bolt fa-4x d-in-block"></i>
+                            <i class="fa-solid fa-bolt fa-4x d-in-block mr-20"></i>
                             <div class="info">
-                                <span class="d-block-mb-10"></span>>Research University</span>
+                                <span class="d-block-mb-10"></span>Research University</span>
                                 <span>Conducted research on universities in Austria.</span>
                             </div>
-                            <div class="date">
+                            <div class="date ml-15">
                                 <span class="d-block-mb-10">2024-08-07</span>
                                 <span class="">11:15 AM</span>
                             </div>
                         </div>
                         <div class="activity d-flex align-center txt-c-mobile">
-                            <i class="fa-solid fa-tag fa-4x d-in-block"></i>
+                            <i class="fa-solid fa-tag fa-4x d-in-block mr-20"></i>
                             <div class="info">
-                                <span class="d-block-mb-10"></span>>Graphic Design</span>
+                                <span class="d-block-mb-10"></span>Graphic Design</span>
                                 <span>Designed new graphics for a client's website</span>
                             </div>
-                            <div class="date">
+                            <div class="date ml-15">
                                 <span class="d-block-mb-10"> 2024-08-07</span>
                                 <span class="">3:00 PM</span>
                             </div>
