--- a/projects.html
+++ b/projects.html
@@ -113,6 +113,143 @@
             </div>
             <!-- End Head -->
             <h1 class="p-relative">Projects</h1>
+            <div class="projects-page d-grid m-20 gap-20 c-gold txt-tf-c">
+                <div class="project bg-red-alt p-20 rad-8 p-relative">
+                    <span class="date">15/10/2024</span>
+                    <h4 class="m-0">Website for Sarah</h4>
+                    <p class="mt-10 mb-10">Designed a personal website for Sarah focused on electronic games, gaming life, and fashion.</p>
+                    <div class="team">
+                        <a href=""><img src="images/ln-2.jpg" alt=""></a>
+                        <a href=""><img src="images/ln-3.jpg" alt=""></a>
+                        <a href=""><img src="images/ln-4.jpg" alt=""></a>
+                        <a href=""><img src="images/ln-5.jpg" alt=""></a>
+                        <a href=""><img src="images/ln-6.jpg" alt=""></a>
+                    </div>
+                    <div class="do d-flex">
+                        <span class="rad-8 bg-red">programming</span>
+                        <span class="rad-8 bg-red">design</span>
+                        <span class="rad-8 bg-red">hosting</span>
+                        <span class="rad-8 bg-red">marketing</span>
+                    </div>
+                    <div class="info between-flex">
+                        <div class="prog rad-8 bg-red">
+                            <span class="rad-8 bg-gold" style="width:50%"></span>
+                        </div>
+                        <div class="">
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            2500
+                        </div>
+                    </div>
+                </div>
+                <div class="project bg-red-alt p-20 rad-8 p-relative">
+                    <span class="date">1/1/2025</span>
+                    <h4 class="m-0">Masked Individuals Site</h4>
+                    <p class="mt-10 mb-10">Developed a website exploring the theme of masked individuals.</p>
+                    <div class="team">
+                        <a href=""><img src="images/ln-3.jpg" alt=""></a>
+                        <a href=""><img src="images/ln-4.jpg" alt=""></a>
+                        <a href=""><img src="images/ln-2.jpg" alt=""></a>
+                        <a href=""><img src="images/ln-5.jpg" alt=""></a>
+                        <a href=""><img src="images/ln-6.jpg" alt=""></a>
+                    </div>
+                    <div class="do d-flex">
+                        <span class="rad-8 bg-red">programming</span>
+                        <span class="rad-8 bg-red">design</span>
+                        <span class="rad-8 bg-red">hosting</span>
+                        <span class="rad-8 bg-red">marketing</span>
+                    </div>
+                    <div class="info between-flex">
+                        <div class="prog rad-8 bg-red">
+                            <span class="rad-8 bg-gold" style="width:50%"></span>
+                        </div>
+                        <div class="">
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            700
+                        </div>
+                    </div>
+                </div>
+                <div class="project bg-red-alt p-20 rad-8 p-relative">
+                    <span class="date">13/11/2024</span>
+                    <h4 class="m-0">GitHub Repository Management</h4>
+                    <p class="mt-10 mb-10"> Managed and resolved issues with large files and synchronization for a GitHub repository.</p>
+                    <div class="team">
+                        <a href=""><img src="images/ln-2.jpg" alt=""></a>
+                        <a href=""><img src="images/ln-3.jpg" alt=""></a>
+                        <a href=""><img src="images/ln-4.jpg" alt=""></a>
+                        <a href=""><img src="images/ln-5.jpg" alt=""></a>
+                        <a href=""><img src="images/ln-6.jpg" alt=""></a>
+                    </div>
+                    <div class="do d-flex">
+                        <span class="rad-8 bg-red">programming</span>
+                        <span class="rad-8 bg-red">design</span>
+                        <span class="rad-8 bg-red">hosting</span>
+                        <span class="rad-8 bg-red">marketing</span>
+                    </div>
+                    <div class="info between-flex">
+                        <div class="prog rad-8 bg-red">
+                            <span class="rad-8 bg-gold" style="width:80%"></span>
+                        </div>
+                        <div class="">
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            3211
+                        </div>
+                    </div>
+                </div>
+                <div class="project bg-red-alt p-20 rad-8 p-relative">
+                    <span class="date">12/9/2024</span>
+                    <h4 class="m-0">Graphic Design for Client</h4>
+                    <p class="mt-10 mb-10">Created custom graphics for a client's website to enhance visual appeal.</p>
+                    <div class="team">
+                        <a href=""><img src="images/ln-2.jpg" alt=""></a>
+                        <a href=""><img src="images/ln-3.jpg" alt=""></a>
+                        <a href=""><img src="images/ln-4.jpg" alt=""></a>
+                        <a href=""><img src="images/ln-5.jpg" alt=""></a>
+                        <a href=""><img src="images/ln-6.jpg" alt=""></a>
+                    </div>
+                    <div class="do d-flex">
+                        <span class="rad-8 bg-red">programming</span>
+                        <span class="rad-8 bg-red">design</span>
+                        <span class="rad-8 bg-red">hosting</span>
+                        <span class="rad-8 bg-red">marketing</span>
+                    </div>
+                    <div class="info between-flex">
+                        <div class="prog rad-8 bg-red">
+                            <span class="rad-8 bg-gold" style="width:100%"></span>
+                        </div>
+                        <div class="">
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            34353
+                        </div>
+                    </div>
+                </div>
+                <div class="project bg-red-alt p-20 rad-8 p-relative">
+                    <span class="date">5/12/2024</span>
+                    <h4 class="m-0">AI Course Projects</h4>
+                    <p class="mt-10 mb-10">Developed several projects as part of an artificial intelligence course.</p>
+                    <div class="team">
+                        <a href=""><img src="images/ln-2.jpg" alt=""></a>
+                        <a href=""><img src="images/ln-3.jpg" alt=""></a>
+                        <a href=""><img src="images/ln-4.jpg" alt=""></a>
+                        <a href=""><img src="images/ln-5.jpg" alt=""></a>
+                        <a href=""><img src="images/ln-6.jpg" alt=""></a>
+                    </div>
+                    <div class="do d-flex">
+                        <span class="rad-8 bg-red">programming</span>
+                        <span class="rad-8 bg-red">design</span>
+                        <span class="rad-8 bg-red">hosting</span>
+                        <span class="rad-8 bg-red">marketing</span>
+                    </div>
+                    <div class="info between-flex">
+                        <div class="prog rad-8 bg-red">
+                            <span class="rad-8 bg-gold" style="width:10%"></span>
+                        </div>
+                        <div class="">
+                            <i class="fa-solid fa-dollar-sign"></i>
+                            6000
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
